--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -217,8 +217,8 @@ a:hover {
     background-color: rgba(0,0,0,0.95) !important;
     padding-top: 15px !important;
     a {
-     color: #FFF !important;
- }  
+       color: #FFF !important;
+   }  
 }
 #myNavbar {
     background: rgb(39, 36, 37);
@@ -276,21 +276,21 @@ a:hover {
             font-size: 13px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-             font-size: 10px;
-         }
-         @media(max-width:900px) {
-             font-size: 8px;
-         }
-         .caret {
+               font-size: 10px;
+           }
+           @media(max-width:900px) {
+               font-size: 8px;
+           }
+           .caret {
             position: absolute;
             right: 8px;
             top: 15px;
             @media(max-width:800px) {
-             right: 8px;
-         }
-     }
- }
- &:hover {
+               right: 8px;
+           }
+       }
+   }
+   &:hover {
     .dropdown-menu {
         background-color: rgba(0, 0, 0, 0.5);
         li {
@@ -341,10 +341,10 @@ a:hover {
             font-size: 14px;
             letter-spacing: 0;
             @media(max-width:1200px) {
-               font-size: 11px;
-           }
-       }
-       .languageSelector {
+             font-size: 11px;
+         }
+     }
+     .languageSelector {
         font-size: 13px;
         letter-spacing: 0;
         font-family: 'allerregular';
@@ -355,9 +355,9 @@ a:hover {
         width: 109px;
         padding-left: 12px;
         @media(max-width:1200px) {
-           font-size: 11px;
-       }
-       li {
+         font-size: 11px;
+     }
+     li {
         height: 100%;
         width: 109px;
         margin-left: -7px;
@@ -427,8 +427,8 @@ a:hover {
     right: 105px;
     padding-left: 20px;
     &:hover {
-       background-color: rgba(0,0,0,0.95) !important;
-       a {
+     background-color: rgba(0,0,0,0.95) !important;
+     a {
         color: #FFF;
     }
 }
@@ -488,9 +488,9 @@ a:hover {
     &:hover {
         #slider-1 {
             h1 {
-             color: #E9204A;
-         } 
-         h2 {
+               color: #E9204A;
+           } 
+           h2 {
             color: #000;
         }
     }
@@ -517,12 +517,12 @@ a:hover {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- height:100%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   height:100%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -535,9 +535,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
-   color:#898B8E;
+ color:#898B8E;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -587,7 +587,7 @@ a:hover {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -624,28 +624,28 @@ a:hover {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- left: 0;
- text-align:center;
- display:block;
- position:absolute;
- bottom:-5px;
- -webkit-transition: all 1s ease 0s; 
- transition: all 1s ease 0s;
- .btn {
-   display:inline-block;
-   padding-top:5px;
-   font-size:15px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:60px;
-   width:125px;
-   border-radius: 100px 100px 0 0;
+   width:100%;
+   left: 0;
+   text-align:center;
+   display:block;
+   position:absolute;
+   bottom:-5px;
+   -webkit-transition: all 1s ease 0s; 
+   transition: all 1s ease 0s;
+   .btn {
+     display:inline-block;
+     padding-top:5px;
+     font-size:15px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:60px;
+     width:125px;
+     border-radius: 100px 100px 0 0;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -728,15 +728,15 @@ a:hover {
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
-   }
-   &:hover{
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
+ }
+ &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -744,8 +744,8 @@ a:hover {
 
     }
     .key {
-     color:#e9214b;
- }
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -774,13 +774,13 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
-   .key {
-     color:#e9214b;
- }
+ .key {
+   color:#e9214b;
+}
 }
 .quarter, .quarter2 {
     &:hover {
-       .overlay{
+     .overlay{
         display:none;
     }
     .outimg {
@@ -1004,16 +1004,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-           display: block;
-           margin: 0;
-           padding: 0;
-           top: 0;
-           position: relative;
-           min-width: none;
-           width: auto;
-       }
-   }
-   .social-block {
+         display: block;
+         margin: 0;
+         padding: 0;
+         top: 0;
+         position: relative;
+         min-width: none;
+         width: auto;
+     }
+ }
+ .social-block {
     min-width: 229px;
     @media(max-width:769px) {
         width: 25%;
@@ -1026,14 +1026,14 @@ a:hover {
         text-align: center;
     }
     p {
-       font-size: 14px;
-       width: 98%;
-       background-color: #4c4b4c;
-       margin: 0;
-       padding: 16px 17px;
-       margin-bottom: 2px;
-   }
-   .last {
+     font-size: 14px;
+     width: 98%;
+     background-color: #4c4b4c;
+     margin: 0;
+     padding: 16px 17px;
+     margin-bottom: 2px;
+ }
+ .last {
     border: none;
 }
 }
@@ -1244,11 +1244,11 @@ a:hover {
             border-bottom: 1px solid #575656; 
             cursor: pointer;
             @media (max-width: 769px) {
-             box-sizing: border;
-             border-bottom: 1px solid #575656; 
-         }
-     }
- }
+               box-sizing: border;
+               border-bottom: 1px solid #575656; 
+           }
+       }
+   }
 }
 .home .footer {
     margin-top: 0;
@@ -1428,10 +1428,10 @@ a:hover {
             color: #777777;
             font-family: 'Helvetica Bold';
             &:hover {
-             color: #e91f4a;   
-         }
-     }
- }
+               color: #e91f4a;   
+           }
+       }
+   }
 }
 #filter_div-no-tag {
     height: 35px;
@@ -1483,11 +1483,24 @@ a:hover {
 #custom_filters{
     width: auto;
     height: 35px;
-    padding-left: 100px;
+    padding-left: 70px;
     background: #F2F2F2;
     font-size: 13px;
     letter-spacing: 0px;
     font-family: 'Helvetica';
+    .filter_by {
+        font-size: 15px;
+        font-family: "bree serif";
+        margin-bottom: 10px;
+        padding-top: 8px;
+        letter-spacing: 1px;
+       // line-height: 35px;
+        font-weight: bold;
+        float: left;
+    }
+    form {
+        float: left;
+    }
     select {
         float: left;
         list-style-type: none;
@@ -1605,10 +1618,10 @@ height: 75px;
 
 }
 .date_filter {
-   display: inline;
-   margin:0px;
+ display: inline;
+ margin:0px;
 
-   .caret {
+ .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1698,19 +1711,19 @@ height: 75px;
     }
 }
 .side-transparent-block {
- height: 150px;
- width: 280px;
- background-color: rgba(0, 0, 0, 0.8);
- position: absolute;
- display: flex;
- justify-content: center;
- align-items: center;
- text-align: center;
- top: 0;
- left: 0;
- z-index: 9;
- display: none;
- @media (max-width: 769px) {
+   height: 150px;
+   width: 280px;
+   background-color: rgba(0, 0, 0, 0.8);
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   top: 0;
+   left: 0;
+   z-index: 9;
+   display: none;
+   @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1750,10 +1763,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-               color: #e91f4a;
-           }
-       }
-   }
+             color: #e91f4a;
+         }
+     }
+ }
 }
 .subhead {
     h3 {
@@ -1777,26 +1790,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
-   display: inline-block;
-   margin-left:0px;
-   color: #807f7f;
-   font-weight: bold;
-   padding: 0;
-   border: 0px;
-   border-left:1px solid #E8E8E7;
-   height: 35px;
-   border-radius: 0;
-   width: 130px;
-   -moz-appearance: none;
-   -webkit-appearance: none;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   border-radius: 0px;
-   position: absolute;
-   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
-   border-right: 10px solid transparent;
+ display: inline-block;
+ margin-left:0px;
+ color: #807f7f;
+ font-weight: bold;
+ padding: 0;
+ border: 0px;
+ border-left:1px solid #E8E8E7;
+ height: 35px;
+ border-radius: 0;
+ width: 130px;
+ -moz-appearance: none;
+ -webkit-appearance: none;
+ -webkit-border-radius: 0px;
+ -moz-border-radius: 0px;
+ border-radius: 0px;
+ position: absolute;
+ background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+ border-right: 10px solid transparent;
 
-   &:hover {
+ &:hover {
     span {
         color: #FFF;
     }
@@ -1827,7 +1840,7 @@ form .btn {
         display: none !important;
         z-index: 1;
     }
- 
+
 }
 
 #clickMe {
@@ -1861,13 +1874,19 @@ form .btn {
 #tag_filter_div {
     padding-top: 10px;
     .active-tags {
-        font-family: 'Helvetica Bold';
-        padding-left: 120px;
-        font-size: 12px;
+        //font-family: 'Helvetica Bold';
+        padding-left: 65px;
+        font-size: 15px;
         font-weight: bold;
         padding-top: 5px;
-        position: relative;
-        top: 3px;
+        //position: relative;
+        //top: 3px;
+
+        font-family: "bree serif";
+        //margin-bottom: 10px;
+        letter-spacing: 1px;
+
+        line-height: 35px;
     }
     ul {
         position: absolute;
@@ -2166,8 +2185,8 @@ form .btn {
     }
 }
 .yamm {
-   display: block;
-   @media(max-width: 769px) {
+ display: block;
+ @media(max-width: 769px) {
     display: none;
 }
 }
@@ -2189,19 +2208,19 @@ form .btn {
 .locale_entry {
     background-color: #e9e9e9;
     label{
-    margin: 20px auto;
-    display: inline-block;
-    float: left;
-    clear: left;
-    width: 250px;
-    text-align: right;
-}
-input {
-  display: inline-block;
-  float: left;
-  height:20px;
-  margin: 20px auto;
-}
+        margin: 20px auto;
+        display: inline-block;
+        float: left;
+        clear: left;
+        width: 250px;
+        text-align: right;
+    }
+    input {
+      display: inline-block;
+      float: left;
+      height:20px;
+      margin: 20px auto;
+  }
 //text-align: center;
 .btn {
     margin: 10px auto;
