--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -362,9 +362,11 @@ li {
         left: 0;
         width: 109px;
         padding-left: 12px;
+        background:transparent linear-gradient(0deg, #231F20 35%, #46464A 100%) repeat scroll 0% 0%;
         @media(max-width:1200px) {
          font-size: 11px;
-     }
+                     
+     } 
      li {
         height: 100%;
         width: 109px;
@@ -383,10 +385,10 @@ li {
             height: 100%;
             padding-left: 10px;
             border-right: 10px solid transparent;
-            background-color:rgba(0, 0, 0, 0.3) !important; 
+          //  background-color:rgba(0, 0, 0, 0.9) !important; 
 
             &:hover {
-                background: rgba(255,255,255,0.6) !important;
+                background: rgba(255,255,255,0.3) !important;
                 color: #FFF;
             }
         }
@@ -407,7 +409,7 @@ li {
                     border-bottom-right-radius: 0 !important;
                     border-top-left-radius: 0 !important;
                     border-top-right-radius: 0 !important;
-                    background: #8cc344;
+                    background: rgba(0, 0, 0, 0.9);
                     &:hover {
                         background: #8cc344;
                         color: #FFF;
@@ -435,7 +437,7 @@ li {
     right: 105px;
     padding-left: 20px;
     &:hover {
-     background-color: rgba(0,0,0,0.95) !important;
+     background-color: rgba(255,255,255,0.5) !important;
      a {
         color: #FFF;
     }
@@ -448,7 +450,7 @@ li {
     width: 60px !important;
     padding-left: 10px;
     &:hover {
-        background-color: rgba(0,0,0,0.95) !important;
+        background-color: rgba(255,255,255,0.5) !important;
         a {
             color: #FFF !important;
         }
